# AisDeployC-Demo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: github-actions.yml
docker/: Dockerfile
docs/: FAQ.md  index.html
docs/html/: annotated.html  classes.html  classinterface_1_1_ais_deploy_c-members.html  classinterface_1_1_ais_deploy_c.html  dir_05919b2fbcaf3de9fbeeb988d1e0d89f.html  dir_994ec93e05c861bde9cf89b89d123c77.html  dir_b31d54d5631803016a26f28213a41162.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  interface_8h.html  interface_8h_source.html  interface_8py.html  interface_8py_source.html  menudata.js  namespaceinterface.html  namespacemembers.html  namespacemembers_vars.html  namespaces.html  structbounding__box-members.html  structbounding__box.html  structclassification-members.html  structclassification.html
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  classes_0.js  classes_2.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js
example/: api_server.py  api_server_dynamic.py  basic.cpp  basic_det.cpp  industrial_ocr.cpp  run_cls.py  run_det.py  run_det_video.py  run_face_recog.py  run_gsem.py  run_pose.py  run_sem.py
interface/: interface.h  interface.py
interface/python/: interface.py
tests/: test_api_server.py  test_example.bat  test_example.sh  test_interface.py
tests/assets/licenses/registed/: linux_registed_info.aisl  macos_registed_info.aisl  windows_registed_info.aisl
tests/assets/settings/: api_server_dynamic.json
