cmake_minimum_required(VERSION 3.12)
project(AisDeployC-Demo)

if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    message(STATUS "Set ONNX_RUNTIME_PATH  for Linux")
    set(ONNX_RUNTIME_PATH /home/runner/work/AisDeployC/AisDeployC/onnxruntime-linux-x64-1.8.1)
    find_package(OpenCV REQUIRED)
    INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    set(OpenCV_DIR thirdparty/Windows/opencv3)
    set(ONNX_RUNTIME_PATH E:\\onnxruntime-win-gpu-x64-1.8.1)
    #    set(ONNX_RUNTIME_PATH E:\\onnxruntime-win-cpu-x64-1.8.1)
    SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
    SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /MT")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_RELEASE} /MTd")
    SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_RELEASE} /MTd")
    add_definitions(-DDEPLOY_ON_WINDOWS)
    set(BUILD_FOR_WIN_VS  "vs2017")
    if (${BUILD_FOR_WIN_VS} MATCHES "vs2017")
        set(WIN_VC vc15)
    endif()
    INCLUDE_DIRECTORIES("${OpenCV_DIR}/include")
else()
    message(STATUS "Set ONNX_RUNTIME_PATH  for MacOs")
    find_package(OpenCV REQUIRED)
    INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
    file(GLOB LIBRARIES "/Users/zhoujinghui/CLionProjects/AisDeployC/cmake-build-debug/libAisDeployC.dylib")
endif()

INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(thirdparty/)
INCLUDE_DIRECTORIES(interface/)

#set(LINK_FILES AisDeployC)
list(APPEND LINK_FILES opencv_imgproc opencv_imgcodecs opencv_core z dl)

set(target_name_basic "basic")
ADD_EXECUTABLE(${target_name_basic} example/basic.cpp)

TARGET_LINK_LIBRARIES(${target_name_basic} ${LINK_FILES} ${LIBRARIES})